<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black2"
    android:orientation="vertical"
    tools:context="com.bitchcat.MainActivity" >

    <LinearLayout
        android:id="@+id/surfaceInLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.bitchcat.Playground
            android:id="@+id/bitchView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </com.bitchcat.Playground>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bestscore"
                android:textColor="#ffffffff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="#ffffffff"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowestscore"
                android:textColor="#ffffffff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvLowestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="#ffffffff"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_bitch"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/btnBomb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bombMode"
                android:textColor="#ffffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:textColor="#ffffffff" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>